@@ -18,14 +18,15 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import sv.edu.udb.InvestigacionDwf.security.jwt.JwtAuthFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity // Habilita la seguridad a nivel de método con @PreAuthorize, etc.
+@EnableMethodSecurity
 public class SecurityConfig {
 
-    private final JwtAuthFilter jwtAuthFilter; // Asegúrate de que JwtAuthFilter esté correctamente definido e inyectable
+    private final JwtAuthFilter jwtAuthFilter;
 
     public SecurityConfig(JwtAuthFilter jwtAuthFilter) {
         this.jwtAuthFilter = jwtAuthFilter;
@@ -44,27 +45,25 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/auth/register", "/auth/login").permitAll()
                         .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/h2-console/**", "/error").permitAll()
+
                         // público: listar TODOS los productos y recomendaciones
                         .requestMatchers(HttpMethod.GET,
                                 "/auth/producto/all",
                                 "/auth/producto/recomendados/**"
                         ).permitAll()
-                        // público: listar ROPA, TIPOPRODUCTO, RESEÑAS, PARÁMETROS
+                        // público: listar TIPOPRODUCTO, RESEÑAS, PARÁMETROS, y GET individual de producto
                         .requestMatchers(HttpMethod.GET,
                                 "/auth/ropa/**",
-                                "/auth/producto/**",
+                                "/auth/producto/{id}", // Permitir GET por ID público
                                 "/auth/tipoproducto/**",
                                 "/auth/resenas/**",
                                 "/auth/parametros/**"
                         ).permitAll()
 
-                        // En lugar de la línea genérica, separamos GET, POST, PUT, DELETE
-                        .requestMatchers(HttpMethod.GET,    "/auth/direcciones/**").hasAnyRole("ADMIN","USER")
-                        .requestMatchers(HttpMethod.POST,   "/auth/direcciones/**").hasAnyRole("ADMIN","USER")
-                        .requestMatchers(HttpMethod.PUT,    "/auth/direcciones/**").hasAnyRole("ADMIN","USER")
-                        .requestMatchers(HttpMethod.DELETE, "/auth/direcciones/**").hasAnyRole("ADMIN","USER") // ¡¡LA LÍNEA CLAVE!!
-                        // --- ----------------------------------------------------------------- ---
-
+                        // ————————————————
+                        // DIRECCIONES: USER/ADMIN
+                        // ————————————————
+                        .requestMatchers("/auth/direcciones/**").hasAnyRole("ADMIN","USER")
 
                         // ————————————————
                         // ADMIN Exclusivo: gestión de usuarios y tipos de producto
@@ -79,37 +78,29 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.DELETE, "/auth/tipoproducto/**").hasRole("ADMIN")
 
                         // ————————————————
-                        // ROPA: CRUD para ADMIN y EMPLOYEE
+                        // ROPA, PRODUCTO, PEDIDOS, CARRITO, NOTIFICACIONES, PUNTOS
                         // ————————————————
+                        // ROPA: CRUD para ADMIN y EMPLOYEE
                         .requestMatchers("/auth/ropa/**").hasAnyRole("ADMIN","EMPLOYEE")
 
-                        // ————————————————
-                        // PRODUCTO: CRUD para ADMIN y EMPLOYEE (salvo las GET públicas ya declaradas)
-                        // ————————————————
-                        .requestMatchers("/auth/producto/**").hasAnyRole("ADMIN","EMPLOYEE")
+                        // PRODUCTO: CRUD para ADMIN y EMPLOYEE (salvo las GET públicas)
+                        .requestMatchers(HttpMethod.POST, "/auth/producto/**").hasAnyRole("ADMIN","EMPLOYEE")
+                        .requestMatchers(HttpMethod.PUT,  "/auth/producto/**").hasAnyRole("ADMIN","EMPLOYEE")
+                        .requestMatchers(HttpMethod.DELETE, "/auth/producto/**").hasAnyRole("ADMIN","EMPLOYEE")
 
-                        // ————————————————
-                        // PEDIDOS: CRUD para ADMIN, USER y EMPLOYEE
-                        // ————————————————
+                        // PEDIDOS
                         .requestMatchers("/auth/pedido/**").hasAnyRole("ADMIN","USER","EMPLOYEE")
                         .requestMatchers("/auth/historial-pedidos/**").hasAnyRole("ADMIN","USER","EMPLOYEE")
 
-                        // ————————————————
-                        // CARRITO y NOTIFICACIONES: ADMIN, USER y EMPLOYEE
-                        // ————————————————
+                        // CARRITO y NOTIFICACIONES
                         .requestMatchers("/auth/carrito/**").hasAnyRole("ADMIN","USER","EMPLOYEE")
                         .requestMatchers("/auth/carrito-item/**").hasAnyRole("ADMIN","USER","EMPLOYEE")
                         .requestMatchers("/auth/notificacion/**").hasAnyRole("ADMIN","USER","EMPLOYEE")
 
-                        // ————————————————
-                        // RESEÑAS, DIRECCIONES, PUNTOS: ADMIN/USER
-                        // ————————————————
-                        .requestMatchers(HttpMethod.POST,   "/auth/resenas/**").hasAnyRole("ADMIN","USER")
-                        .requestMatchers(HttpMethod.PUT,    "/auth/resenas/**").hasAnyRole("ADMIN","USER")
-                        .requestMatchers(HttpMethod.DELETE, "/auth/resenas/**").hasAnyRole("ADMIN","USER")
+                        // RESEÑAS (CRUD)
+                        .requestMatchers("/auth/resenas/**").hasAnyRole("ADMIN","USER")
 
-
-
+                        // PUNTOS
                         .requestMatchers("/auth/historial-puntos/**").hasAnyRole("ADMIN","USER")
 
                         // ————————————————
@@ -130,21 +121,30 @@ public class SecurityConfig {
     }
 
 
-
-
-
+    /**
+     * Configuración de CORS para permitir tráfico de Ngrok y localhost.
+     * @return CorsConfigurationSource
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000")); // Puedes añadir más orígenes si es necesario
-        config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
-        // *** CAMBIA ESTA LÍNEA: Permite todos los encabezados ***
-        config.setAllowedHeaders(List.of("*"));
+
+        // --- 🔑 CAMBIO CLAVE: Permite localhost:3000 y TODOS los subdominios de ngrok-free.dev ---
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "https://*.ngrok-free.dev"
+        ));
+        // Nota: Ngrok usa 'https://[subdominio].ngrok-free.dev'
         // ******************************************************
-        config.setAllowCredentials(true); // Permite el envío de cookies y credenciales
+
+        config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
+        // Permite todos los encabezados (necesario para Authorization y Content-Type)
+        config.setAllowedHeaders(List.of("*"));
+
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // Aplica esta configuración a todas las rutas
+        source.registerCorsConfiguration("/**", config); // Aplica a todas las rutas
         return source;
     }
 
@@ -156,8 +156,6 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
-        // Necesitas un UserDetailsService configurado para que AuthenticationManager funcione correctamente
-        // Aquí se asume que tu UserDetailsService ya está configurado (por ejemplo, en otra clase o implícitamente)
         return http
                 .getSharedObject(AuthenticationManagerBuilder.class)
                 .build();
